cmake_minimum_required(VERSION 2.8)

PROJECT(PTHREAD_PRACTICE)

SET(CMAKE_C_FLAGS "-pthread")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/lib)

ADD_SUBDIRECTORY(src/chapter01)
ADD_SUBDIRECTORY(src/chapter02)
ADD_SUBDIRECTORY(src/chapter03)
ADD_SUBDIRECTORY(src/chapter05)
ADD_SUBDIRECTORY(src/chapter06)
ADD_SUBDIRECTORY(src/chapter07)