ADD_EXECUTABLE(mutex_static mutex_static.c)
ADD_EXECUTABLE(mutex_dynamic mutex_dynamic.c)
ADD_EXECUTABLE(alarm_mutex alarm_mutex.c)
ADD_EXECUTABLE(trylock trylock.c)
ADD_EXECUTABLE(backoff backoff.c)
ADD_EXECUTABLE(cond_static cond_static)
ADD_EXECUTABLE(cond_dynamic cond_dynamic.c)
ADD_EXECUTABLE(cond cond.c)
ADD_EXECUTABLE(alarm_cond alarm_cond.c)