ADD_EXECUTABLE(once once.c)
ADD_EXECUTABLE(mutex_attr mutex_attr.c)
ADD_EXECUTABLE(cond_attr cond_attr.c)
ADD_EXECUTABLE(thread_attr thread_attr.c)
ADD_EXECUTABLE(cancel cancel.c)
ADD_EXECUTABLE(cancel_disable cancel_disable.c)
ADD_EXECUTABLE(cancel_async cancel_async.c)
ADD_EXECUTABLE(cancel_cleanup cancel_cleanup.c)
ADD_EXECUTABLE(cancel_subcontract cancel_subcontract.c)
ADD_EXECUTABLE(tsd_once tsd_once.c)
ADD_EXECUTABLE(tsd_destructor tsd_destructor.c)
ADD_EXECUTABLE(sched_attr sched_attr.c)
ADD_EXECUTABLE(sched_thread sched_thread.c)